--- a/components/navigation/index.wxml
+++ b/components/navigation/index.wxml
@@ -1,6 +1,6 @@
 <!--components/navigation/index.wxml-->
 <view class="container">
-    <image class="pre-btn" src="images/上一个@2x.png" />
-    <text>电影名称</text>
-    <image class="next-btn" src="images/下一个@2x.png" />
+    <image class="pre-btn" src="images/上一个@2x.png" bind:tap="nextClick" id="pre" style="opacity:{{nextOpacity}}"/>
+    <text>{{classicTitle}}</text>
+    <image class="next-btn" src="images/下一个@2x.png" bind:tap="preClick"  id="next" style="opacity:{{preOpacity}}"/>
 </view>
