--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,6 +1,6 @@
 <!--pages/classic/classic.wxml-->
 <view class="header">
-    <epsoide-cmp class="epsoide" movieIndex="{{movieIndex}}" />
+    <epsoide-cmp class="epsoide" classicIndex="{{classicIndex}}" />
     <like-cmp
             count="{{count}}"
             isLike="{{isLike}}"
@@ -8,5 +8,10 @@
             bind:like="like"
     />
 </view>
-<movie-cmp movieImg="{{movieImg}}" movieContent="{{movieContent}}" />
-<navi-cmp class="navi"/>
+<movie-cmp classicImg="{{classicImg}}" classicContent="{{classicContent}}" />
+<!--<music-cmp classicImg="{{classicImg}}" classicContent="{{classicContent}}" />-->
+<navi-cmp
+        classicTitle="{{classicTitle}}"
+        currIndex="{{currIndex}}"
+        lastIndex="{{lastIndex}}"
+        class="navi"/>
