--- a/components/classic/music/index.wxss
+++ b/components/classic/music/index.wxss
@@ -8,6 +8,28 @@
 .container .main{
     width:100%;
     height:480rpx;
+    position:relative;
+}
+.container .circle{
+    width: 450rpx;
+    height: 450rpx;
+    border-radius: 50%;
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-left:-225rpx;
+    margin-top:-225rpx;
+}
+
+.container .play{
+    width: 120rpx;
+    height: 120rpx;
+    border-radius: 50%;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-60rpx;
+    margin-top:-60rpx;
 }
 
 .container .text-img{
