--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,8 +1,8 @@
 <!--components/classic/music/index.wxml-->
 <view class="container">
     <view class="main">
-        <image class="circle" src="{{classicImg}}" />
-        <image class="play" src="{{pauseImg}}" />
+        <image class="circle {{isPlay?'rotation':''}}" src="{{classicImg}}" bind:tap="onPlay" animation="{{animationData}}"/>
+        <image class="play" src="{{playImg}}" bind:tap="onPlay"/>
     </view>
     <image src="images/音乐。@2x.png" class="text-img" />
     <text>{{classicContent}}</text>
