--- a/components/classic/movie/index.wxss
+++ b/components/classic/movie/index.wxss
@@ -1,23 +1,2 @@
 /* components/classic/movie/index.wxss */
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.container .main-img{
-    width:100%;
-}
-
-.container .text-img{
-    width: 46rpx;
-    height: 142rpx;
-    position:relative;
-    top: -60rpx;
-    left:-310rpx;
-}
-
-.container text{
-    font-size: 35rpx;
-    max-width: 530rpx;
-}
+@import "../comment.wxss";
