--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -2,7 +2,7 @@
 <view class="container">
     <view class="main">
         <image class="circle {{isPlay?'rotation':''}}" src="{{classicImg}}" bind:tap="onPlay" animation="{{animationData}}"/>
-        <image class="play" src="{{playImg}}" bind:tap="onPlay"/>
+        <image class="play" src="{{isPlay?'images/播放中.png':'images/暂停中.png'}}" bind:tap="onPlay"/>
     </view>
     <image src="images/音乐。@2x.png" class="text-img" />
     <text>{{classicContent}}</text>
