--- a/components/book/index.wxml
+++ b/components/book/index.wxml
@@ -1,13 +1,13 @@
 <!--components/books/index.wxml-->
 <view class="container">
-    <image src="{{}}" />
+    <image src="{{book.image}}" />
     <view class="info-card">
         <view class="book-info">
-            <text class="title">爱你就像爱生命</text>
-            <text class="auth">李银河</text>
+            <text class="title">{{book.title}}</text>
+            <text class="auth">{{book.author}}</text>
         </view>
         <view class="info">
-            <text class="likes">233 喜欢 · 68 短评</text>
+            <text class="likes">{{book.fav_nums}} 喜欢 · {{}} 短评</text>
         </view>
     </view>
 </view>
