--- a/pages/books/books.wxml
+++ b/pages/books/books.wxml
@@ -8,8 +8,8 @@
 <view class="books-container">
     <image src="../../images/jingxuan.png" />
     <view class="block">
-        <block>
-            <book-cmp class="book"/>
+        <block wx:for="{{books}}" wx:key="{{id}}">
+            <book-cmp class="book" book="{{item}}"/>
         </block>
     </view>
 </view>
