--- a/pages/books/books.wxml
+++ b/pages/books/books.wxml
@@ -1,15 +1,11 @@
 <!--pages/books/books.wxml-->
-<view class="search">
-    <view class="search-bar">
-        <image src="../../images/search.png" />
-        <text>搜索图书名称</text>
-    </view>
-</view>
+<search-cmp />
 <view class="books-container">
     <image src="../../images/jingxuan.png" />
     <view class="block">
         <block wx:for="{{books}}" wx:key="{{id}}">
-            <book-cmp class="book" book="{{item}}"/>
+            <book-cmp class="book" book="{{item}}" />
         </block>
     </view>
+    <view>{{test[0]}}</view>
 </view>
