--- a/components/book/index.wxss
+++ b/components/book/index.wxss
@@ -18,6 +18,9 @@
     width: 100%;
     height: 138rpx;
     line-height: 40rpx;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     position: absolute;
     bottom:0;
     left:0;
