--- a/pages/books/books.wxml
+++ b/pages/books/books.wxml
@@ -1,5 +1,5 @@
 <!--pages/books/books.wxml-->
-<search-cmp  hotList="{{hotList}}"/>
+<search-cmp bind:isSearch="isSearch" hotList="{{hotList}}"/>
 <view class="books-container" hidden="{{showSearch}}">
     <image src="../../images/jingxuan.png" />
     <view class="block">
@@ -7,5 +7,4 @@
             <book-cmp class="book" book="{{item}}" />
         </block>
     </view>
-    <view>{{test[0]}}</view>
 </view>
